@@ -1,10 +1,12 @@
 ============================================================
 === 2017
 
+	Support higher precision floating point arithmetic for locarna-p
+	  pf calculation (long double and quad math) selectable dynamically
 	[mlocarna] Fix specifying anchor constraints via bed file
-	           allow arbitrary order of entries in bed input
+	  allow arbitrary order of entries in bed input
 	[mlocarna] Refactor computation of input pp files;
-	           support caching of pp files (--dp-cache)
+	  support caching of pp files (--dp-cache)
 
 1.9.3beta2 (2017-07-25)
 	Code improvements
